<resources>
    <string name="app_name">Traveeel</string>
    <string name="description_text"> "Hagimit Falls is a series of small cascades and streams featuring natural swimming pools and rock formations. The area is hushed and secluded so you can get away from the bustling city life. There are no shopping malls, restaurants, and hotels that can be an eyesore when you're exposed too much to the metro. Here, you can relax and release all your stress. It's just you and nature! Small nipa huts and cottages are dotted throughout the vicinity. The whole area is under the canopy of trees, so you don't have to wrry about the scorching heat. Hagimit Falls is in the heart of a rainforest so the surroundings are cool and rejuvenating.\n\n
        Activities:\n
        *Camping
        *Picnic together with friends, family, and colleagues\n
        *Exploring around the area
        *Swimming
        *Communing with nature"
        How to get there:\n
        *From Manila,just ride a plane going to Davao
        *From Davao Airport,ride a jeep to Sasa Port
        *From Sasa Port,take a boat to Peñaplata
        *Upon arriving in the island,motorcycle transport is the best way to go to Hagimit Falls\n\n

        Before reaching the falls,there is a collection for entrance fee:
        Adult - Php 40.00 Kids 2 to 7 yrs old - Php 20.00 You can also choose your own cottage:\n\n

        Open Cottage - Php 150.00 - Php 250.00 Closed Cottage - Php 600.00 (Overnight good for 2person) Concrete with Aircon - Php 1,500.00 ATV - Php 375.00 (per ride)\n\n </string>
    <string name="text1">The Giant Clam Sanctuary is a part of an eco-tourism program called “Taclobo Tours”. Now, these clams are considered endangered. It is under the protection of Davao del Norte State College, with the partnership of the local community (AdeCor United Fisherfolks Organization – ACUFOR).\n
How to Get There:\n
Via Sta. Ana Wharf. From Talicud Island, ride a boat that will take you to Kaputian Beach.
        Travel time takes 45 minutes. If you share the boat with other passengers, the fare is only Php 50. Before swimming, the visitors will have a quick introduction and safety precautions from the caretakers.
Rates:\n
Boat Rental: This was only a side trip from our Samal Island hopping. We paid Php 2,500 for the whole trip.
Entrance Fee: The sanctuary charges Php 100 entrance fee inclusive of environmental fee
Equipment: If you forgot to bring your mask and snorkel, you can also rent it for only Php 100</string>
    <string name="text2">Canibad is actually a sea by the foot of the mountains. So when you get there, you will see the vastness of the sea on top of a hill while coconut trees and mountains greet you welcome to Canibad! You’ll have to go down a very steep trail before reaching the white sand and the cool blue waters of the beach. The coastline is just about two kilometers with very fine white sand, pebbles and some big pile of rocks on its edges.
The people on Canibad seemed joyous as they gathered around their bonfires, drinking, eating, cajoling, and doing other forms of merrymaking by the beach or in their tents. After all, in that paradise that has escaped the usual crowd at the more accessible beaches on the other side of Samal Island, one couldn’t help but feel free and far away, in a place that affords everyone more private space.
How to get there
Major airlines such as Cebu Pacific and Philippine Airlines fly regularly from Manila to Davao City, your jump-off point to Canibad Beach.
Once in the city, board a jeep bound for Sasa Wharf (P10-15), depending on where you come from, the ideal places to ride the jeep are Abreeza or SM near Davao Ecoland. A taxi may cost up to P150.
There are regular ferries going to and from Samal Island, the fare is around P10 and takes only a few minutes; you also have to pay a fee of P5.
After arriving at the ferry terminal on Samal Island, there will be a lot of habal-habal drivers waiting for passengers. Currently, there is no public transportation that goes to Canibad directly, you have to rent a motorcycle and pass through a rough road to get to the beach and its resorts. They charge around P500 round trip.
Rates
Entrance Fee: P30; P40 (day tour); P80 (overnight)
Tent Corkage Fee: P50 (for 2 pax); P100 (for 4 pax); P150 (for 5 pax and above)
Cottage Rental Fee: Open Cottage (P450 day trip, P650 overnight); Non-AirCon Cottage good for 4 pax (P1000 day trip, P1800 overnight); AirCon Cottage good for 2 pax (P1800 day trip, P2500 overnight)</string>
    <string name="text3">The Vanishing Island is just a small strip of white sands located just minutes away from the coast of Tambo, Babak in Samal. The island is visible only during low tides and can be noticed easily from the distance at the sight of houses floating just above the ocean. These have been made for visitors who wish to extend their stay in the island. Samal’s Vanishing Island is just one of the numerous beaches and attractions in the Island of Samal, Davao del Norte. It has just recently been developed to attract tourists and travelers from all over the world. To further support the rich marine life in the island, mangroves have been planted all over the premises and the island itself has been declared a protected marine reserve area. If you are looking for a vacation spot that’s far from traffic, excessive noise, pollution or crowded shopping malls, then this island is definitely the perfect place for you to unwind.
How to get to the Vanishing island
To get to Samal’s Vanishing Island, you first have to travel to Samal Island from Davao City. You can choose from any of the following routes:From Santa Ana Wharf near the Magsaysay Park, you can take a motorboat which will directly take you to Talikud and Kaputian Island.
From Km 11 Sasa Wharf (Paradise Island Wharf), you can take a motorboat to Babak Wharf directly.
From Km 11 Sasa Wharf Ferryboat Landing, you can take the Island City Express Bus from Cabaguio St. (Satellite terminal) and R. Castillo and be transported by a ferry to Brgy. Caliclic, Babak district.From Brgy. Tambo, you can rent a boat to reach the island.From Waterfront Wharf, you can hire a boat to reach the island.</string>
    <string name="text4">Kaputian Beach Park Resort is one of the great Resorts that Samal Island has. This resort is operated by the local government of Samal. The resort is located just with in the Southern coast of Samal Island. The resort takes pride with its authentic talc like sand and crystal clear blue waters that stand among the many resort in this island.
Samal Island is dotted with so many scenic spots good for photo shooting, diving, snorkeling and many other water sports. One of the good spot around it’s vicinity is “Kaputian Beach Resort”. This resort has its natural touch up to this day. Surely nature trippers will enjoy its natural touch.

Rates:
DAY TOUR ONLY
Adult (10 years old and above)
Php 20.00 ( Samal Resident )
Php 50.00 ( Non Samal Resident)
+ Php 30.00 EUF for Non- Samal Resident
Kids ( 5 years old to 9 years old )
Php 10.00 (Samal Resident)
Php 20.00 (Non Samal Resident)
Tables, chairs, picnic huts, kubo, beach beds are available for rents.
Facilities for Rent:
Picnic Shed – Php 100.00
Open Bahay Kubo – Php 350.00
Table – Php 100.00
Chair – Php 10.00</string>
    <string name="text15"> "At the center of Boracay's worldwide fame is White Beach, a sprawling 4-kilometer beachfront lined with resorts, hotels, and restaurants.
White Beach is Boracay's main tourist attraction and understandably the most jam-packed area since the most popular activity in the island is the Boracay sightseeing beach trip. Aside from the undeniable charm of the beautiful white sand and sparkling azure waters, everything you need is a stone's throw away from White Beach.
White Beach is divided into Station 1, 2, and 3. Station 1 is where you'll find Boracay's luxury resorts, as well as the famous rock formation called Willy's Rock.
Station 2 is home to mid-range hotels and big establishments such as D'Mall and D'Talipapa. It is also the main jump-off point for Boracay beach water activities. Station 3, on the other hand, is the hub for budget accommodations. It has a serene and quiet ambiance compared to other stations.
While it may seem like White Beach is the one-stop-shop for a full Boracay island experience, it isn't. Beyond White Beach are several other beaches that are less crowded, just as pristine, and filled with even more exciting activities.
Go off the beaten path and discover these beaches and islands scattered around Boracay map when you book your inland and island hopping tours.</string>
    <string name="text16"> "No what to do at Boracay list is complete without Puka Beach. Named after the puka shells that lined its shores in the past, Puka Beach has slightly coarse sand compared to White Beach. Fortunately, Puka Beach makes up for it with its almost unspoiled beauty.
Overlooking the beach is a verdant forest on a cliff; there are also considerably fewer establishments on the beachfront. You can visit this by joining a day trip to Boracay Island.
Situated on the northernmost tip of Boracay Island, Puka Beach is a 20-minute tricycle ride away from White Beach. You can bring your mats if you plan to stay here for a couple of hours.
This popular travel destination is one of the beaches included in most island-hopping excursions in Boracay. It's far from the three stations, which means there's a high chance you get to enjoy this unspoiled, idyllic beach with only a few people.
Puka Beach is also the place to be if you want to catch a glimpse of Boracay's flying foxes. The migration of these magnificent fruit bats is a sight to behold. Lend a hand in their preservation by joining the organization, Friends of the Flying Foxes, in their regular bat counts.
If you're eager to have some relaxation time, you can buy a coconut drink and lounge while enjoying the scenic view of the island. Make sure to buy some colorful seashells as souvenirs to remind you of your experience in this part of Boracay.</string>
    <string name="text17"> "You'll also know why the island is on the top of the must-visit places in the world. Three beaches that are on most Boracay island hopping tours: Magic Island, Crocodile Island, and Crystal Cove Beach.
Magic Island\n
This island is not only known for its turquoise waters, but it's also a famous cliff-diving site. Magic Island offers five diving platforms; 3-meters, 5-meters, 7-meters, 9-meters, and 10-meters.
The different height options allow you to summon the courage and work your way up the highest cliff. Now, leap! It will be one for the books.
Crocodile Island/n
Don't panic! There are no actual crocodiles on Crocodile Island. This uninhabited island got its name from its shape, which resembles a crocodile's head.
Recognized as the top scuba diving sites in Boracay, this island is teeming with marine life. The thriving coral reefs are home to a wide variety of fish including lionfish, scorpionfish, moray eels, cuttlefish, and groupers.
Crystal Cove Island\n
Originally known as Tiguatian Island by the locals, this island become popular due to its unique crystal protrusions. It has two limestone coves accessible through snorkeling. You can also feed pigeons and pick up seashells for collection.</string>
    <string name="text18">
        Also known as “back beach”, Bulabog is a popular venue for high-altitude activities such as windsurfing and kitesurfing. In fact, there are competitions held in this Boracay tourist spot Visayas. Even if you’re not familiar with the sport, watching the surfers and
        their acrobatic moves can be very entertaining.</string>
    <string name="text19">Just like other beaches in Boracay, Ilig-Iligan boasts beautiful white sand and crystal clear waters. What sets Ilig-Iligan Beach apart is the serene beachfront and the scenic limestone islets a few meters from the shore.</string>
</resources>