<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Boracay">

    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ac_textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Boracay Tourist Spot"
                android:textColor="#000000"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/dc_imageView"
                android:layout_width="389dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/white" />

            <TextView
                android:id="@+id/dc_textView7"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:text="1.White Beach"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dc_textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/text15"/>


            <ImageView
                android:id="@+id/dc_imageViewz"
                android:layout_width="389dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pukas" />

            <TextView
                android:id="@+id/dc_textView7z"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="2.Puka Beach"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dc_textView9z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/text16"
                />

            <ImageView
                android:id="@+id/dc_imageViewX"
                android:layout_width="389dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/hopping" />

            <TextView
                android:id="@+id/dc_textView7X"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="3.Experince Island Hopping"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dc_textView9X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/text17"
                />

            <ImageView
                android:id="@+id/dc_imageViewC"
                android:layout_width="389dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bulabog" />

            <TextView
                android:id="@+id/dc_textView7C"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="4.Bulabog Beach"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dc_textView9C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/text18"
                />

            <ImageView
                android:id="@+id/dc_imageViewv"
                android:layout_width="389dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/iligan" />

            <TextView
                android:id="@+id/dc_textView7v"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="5.Ilig-Iligan Beach"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dc_textView9v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:text="@string/text19"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


